[v0.9.204] Added setting for Overlay font. Added hover texts for font settings. Made sure the user can only select fonts from within the resources/fonts folder.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -30,6 +30,7 @@
     "show_welcome_on_startup": true,
     "tracker_font_name": "Minecraft.ttf",
     "tracker_font_size": 16.0,
+    "overlay_font_name": "Minecraft.ttf",
     "ui_font_name": "Roboto-Regular.ttf",
     "ui_font_size": 16.0
   },
