[v0.9.242] Added "Open World Folder" button that conditionally (based on global or local stats) opens the folder where one can find everything the tracker will read from. Updated craftmine template to include the "is_recipe" flag. Also adjusted the default settings.json file to include all 6 sections.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -6,7 +6,7 @@
   "optional_flag":	"",
   "lang_flag": "",
   "general":	{
-    "section_order":	[0, 1, 2, 3, 4],
+    "section_order":	[0, 1, 2, 3, 4, 5],
     "enable_overlay":	false,
     "using_stats_per_world_legacy":	true,
     "fps":	60,
