[v0.9.288] Corrected .zip.zip naming for non-windows builds.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
           elif [ "$RUNNER_OS" == "Linux" ]; then
             SUFFIX="Linux"
           fi
-          FILENAME="Advancely-v${{ env.PROJECT_VERSION }}-${SUFFIX}.zip"
+          FILENAME="Advancely-v${{ env.PROJECT_VERSION }}-${SUFFIX}"
           echo "FILENAME=$FILENAME" >> $GITHUB_ENV
 
       - name: Upload Build Artifact
