[v0.9.291] Early version of instance detection. (Not fully working yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,8 +156,8 @@ target_link_libraries(${EXECUTABLE_NAME} PRIVATE
 
 # Add platform-specific system libraries
 if (WIN32)
-    # Link against common Windows libraries needed by SDL
-    target_link_libraries(${EXECUTABLE_NAME} PRIVATE gdi32 user32 winmm shell32 version)
+    # Link against common Windows libraries needed by SDL and advancely
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE gdi32 user32 winmm shell32 version ntdll)
 elseif (APPLE)
     # On macOS, link against required system frameworks
     target_link_libraries(${EXECUTABLE_NAME} PRIVATE "-framework Cocoa" "-framework Metal" "-framework IOKit")
