--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
-        run: brew install sdl3 sdl3_image sdl3_ttf curl libsharpyuv
+        run: brew install sdl3 sdl3_image sdl3_ttf curl jpeg-xl webp
 
       # --- CMAKE CONFIGURATION (FIXED) ---
       - name: Configure CMake (Linux)
