--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,52 +64,66 @@ jobs:
             cp -r resources "release/"
             cp _PLEASE_READ_ME.txt LICENSES.txt README.md "release/"
 
+            # --- RECURSIVE BUNDLING LOGIC ---
             LIBS_TO_PROCESS=()
-            PROCESSED_LIBS=() # Tracks full original paths
-            COPIED_LIBS_BASENAMES=() # Tracks filenames to prevent duplicates
+            PROCESSED_LIBS=() # Tracks full original paths to already processed libs
           
-            DIRECT_DEPS=$(otool -L "$EXE_DEST_PATH" | grep "$BREW_PREFIX" | awk '{gsub(/:$/, ""); print $1}')
+            # 1. Get initial list of direct dependencies for the main executable
+            DIRECT_DEPS=$(otool -L "$EXE_DEST_PATH" | grep "$BREW_PREFIX" | awk '{print $1}')
             for dep in $DIRECT_DEPS; do
               LIBS_TO_PROCESS+=("$dep")
             done
 
+            # 2. Loop until there are no more dependencies to process
             while [ ${#LIBS_TO_PROCESS[@]} -gt 0 ]; do
               lib_path=${LIBS_TO_PROCESS[0]}
               lib_name=$(basename "$lib_path")
               LIBS_TO_PROCESS=("${LIBS_TO_PROCESS[@]:1}")
 
-              # FIX: Check if we have already copied a library with this FILENAME.
-              if [[ " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${lib_name} " ]]; then
-                # If we have, we don't need to copy it again. But we still must ensure
-                # the executable knows to look for the version we already copied.
-                install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$EXE_DEST_PATH"
+              # Skip if we have already processed this exact library path
+              if [[ " ${PROCESSED_LIBS[*]} " =~ " ${lib_path} " ]]; then
                 continue
               fi
-
+          
               echo "Processing dependency: $lib_path"
+          
+              # Copy the library into the bundle
               cp "$lib_path" "$LIBS_DEST_DIR/"
+          
+              # Update the main executable to look for this library in the app bundle
               install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$EXE_DEST_PATH"
-          
+
               PROCESSED_LIBS+=("$lib_path")
-              COPIED_LIBS_BASENAMES+=("$lib_name")
           
-              TRANSITIVE_DEPS=$(otool -L "$lib_path" | grep "$BREW_PREFIX" | awk '{gsub(/:$/, ""); print $1}')
+              # 3. Find the transitive dependencies of the library we just copied
+              TRANSITIVE_DEPS=$(otool -L "$LIBS_DEST_DIR/$lib_name" | grep "$BREW_PREFIX" | awk '{print $1}')
               for transitive_dep in $TRANSITIVE_DEPS; do
                 LIBS_TO_PROCESS+=("$transitive_dep")
               done
             done
           
+            # 4. Final pass: update all copied libraries to reference each other correctly
             for copied_lib_path in "$LIBS_DEST_DIR"/lib*.dylib; do
               for original_lib_path in "${PROCESSED_LIBS[@]}"; do
                 original_lib_name=$(basename "$original_lib_path")
-                if [ -f "$LIBS_DEST_DIR/$original_lib_name" ]; then
-                  install_name_tool -change "$original_lib_path" "@executable_path/$original_lib_name" "$copied_lib_path"
-                fi
+                # Update the reference inside the currently looped library
+                install_name_tool -change "$original_lib_path" "@executable_path/$original_lib_name" "$copied_lib_path"
               done
             done
           
+            # Ad-hoc sign all the bundled libraries and the main app
             codesign --force --sign - "$LIBS_DEST_DIR"/lib*.dylib
             codesign --force --deep --sign - "$BUNDLE_DEST_PATH"
+          
+          # --- END OF RECURSIVE BUNDLING LOGIC ---
+          elif [ "$RUNNER_OS" == "Linux" ]; then
+            cp build/Advancely release/
+            cp -r resources release/
+            cp _PLEASE_READ_ME.txt LICENSES.txt README.md release/
+            cp /usr/local/lib/libSDL3.so.0 release/
+            cp /usr/local/lib/libSDL3_image.so.0 release/
+            cp /usr/local/lib/libSDL3_ttf.so.0 release/
+          fi
           
             TEMPLATE_DIR="release/resources/templates/1.16.1"
             if [ -d "$TEMPLATE_DIR/All_Advancements" ]; then
