--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
           mkdir release
           # --- OS-Specific File Copying ---
           if [ "$RUNNER_OS" == "macOS" ]; then
-            # --- ROBUST SCRIPT WITH RECURSIVE DEPENDENCY BUNDLING ---
+            # --- COMPATIBLE RECURSIVE DEPENDENCY BUNDLING SCRIPT ---
             BUNDLE_DEST_PATH="release/Advancely.app"
             EXE_PATH="$BUNDLE_DEST_PATH/Contents/MacOS/Advancely"
             LIBS_DEST_DIR="$BUNDLE_DEST_PATH/Contents/MacOS"
@@ -65,36 +65,44 @@ jobs:
             cp _PLEASE_READ_ME.txt LICENSES.txt README.md "release/"
 
             # Step 1: Discover all unique dependencies recursively
-            declare -A LIBS_TO_COPY
+            ALL_DEPENDENCIES=()
+            COPIED_LIBS_BASENAMES=() # Use a simple array to track filenames
             FILES_TO_INSPECT=("$EXE_PATH")
+          
             idx=0
             while [ $idx -lt ${#FILES_TO_INSPECT[@]} ]; do
               file_to_inspect="${FILES_TO_INSPECT[$idx]}"
               idx=$((idx + 1))
+
               DEPS=$(otool -L "$file_to_inspect" | grep "$BREW_PREFIX" | awk '{print $1}')
+          
               for dep_path in $DEPS; do
-                if [[ -z "${LIBS_TO_COPY[$dep_path]}" ]]; then
+                dep_name=$(basename "$dep_path")
+                # Check if a library with this filename has already been queued for copy
+                if [[ ! " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${dep_name} " ]]; then
                   echo "Discovered dependency: $dep_path"
-                  LIBS_TO_COPY[$dep_path]=1
+                  ALL_DEPENDENCIES+=("$dep_path")
+                  COPIED_LIBS_BASENAMES+=("$dep_name")
                   FILES_TO_INSPECT+=("$dep_path")
                 fi
               done
             done
 
             # Step 2: Copy all unique libraries to the bundle
-            for lib_path in "${!LIBS_TO_COPY[@]}"; do
+            for lib_path in "${ALL_DEPENDENCIES[@]}"; do
               echo "Copying $lib_path"
               cp "$lib_path" "$LIBS_DEST_DIR/"
             done
           
             # Step 3: Update all references
             ALL_BINARIES=("$EXE_PATH")
-            for lib_path in "${!LIBS_TO_COPY[@]}"; do
+            for lib_path in "${ALL_DEPENDENCIES[@]}"; do
               lib_name=$(basename "$lib_path")
               ALL_BINARIES+=("$LIBS_DEST_DIR/$lib_name")
             done
+
             for binary in "${ALL_BINARIES[@]}"; do
-              for lib_path in "${!LIBS_TO_COPY[@]}"; do
+              for lib_path in "${ALL_DEPENDENCIES[@]}"; do
                 lib_name=$(basename "$lib_path")
                 install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$binary"
               done
