--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
           mkdir release
           # --- OS-Specific File Copying ---
           if [ "$RUNNER_OS" == "macOS" ]; then
-            # --- COMPATIBLE RECURSIVE DEPENDENCY BUNDLING SCRIPT ---
+            # --- FINAL ROBUST RECURSIVE DEPENDENCY BUNDLING SCRIPT ---
             BUNDLE_DEST_PATH="release/Advancely.app"
             EXE_PATH="$BUNDLE_DEST_PATH/Contents/MacOS/Advancely"
             LIBS_DEST_DIR="$BUNDLE_DEST_PATH/Contents/MacOS"
@@ -64,34 +64,53 @@ jobs:
             cp -r resources "release/"
             cp _PLEASE_READ_ME.txt LICENSES.txt README.md "release/"
 
-            # Step 1: Discover all unique dependencies recursively
+            # Step 1: Discover all unique dependencies recursively, resolving @rpath
             ALL_DEPENDENCIES=()
-            COPIED_LIBS_BASENAMES=() # Use a simple array to track filenames
+            COPIED_LIBS_BASENAMES=()
             FILES_TO_INSPECT=("$EXE_PATH")
           
             idx=0
             while [ $idx -lt ${#FILES_TO_INSPECT[@]} ]; do
               file_to_inspect="${FILES_TO_INSPECT[$idx]}"
               idx=$((idx + 1))
+          
+              # Get the directory of the file being inspected to resolve @rpath
+              dir_of_file=$(dirname "$file_to_inspect")
 
-              # The awk command now ignores lines ending in a colon.
-              DEPS=$(otool -L "$file_to_inspect" | grep "$BREW_PREFIX" | awk '!/:$/ {print $1}')
+              # Get all non-system dependencies
+              DEPS=$(otool -L "$file_to_inspect" | awk '!/:$/ {print $1}' | grep -v '^/System' | grep -v '^/usr/lib')
           
               for dep_path in $DEPS; do
-                dep_name=$(basename "$dep_path")
-                if [[ ! " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${dep_name} " ]]; then
-                  echo "Discovered dependency: $dep_path"
-                  ALL_DEPENDENCIES+=("$dep_path")
-                  COPIED_LIBS_BASENAMES+=("$dep_name")
-                  FILES_TO_INSPECT+=("$dep_path")
+                resolved_dep_path=""
+                # Resolve @rpath dependencies relative to the library that needs them
+                if [[ $dep_path == @rpath* ]]; then
+                  resolved_dep_path="${dep_path/@rpath/$dir_of_file}"
+                # Also handle absolute Homebrew paths
+                elif [[ $dep_path == $BREW_PREFIX* ]]; then
+                  resolved_dep_path="$dep_path"
+                fi
+          
+                # If we successfully resolved a path, process it
+                if [[ -n "$resolved_dep_path" ]]; then
+                  dep_name=$(basename "$resolved_dep_path")
+                  if [[ ! " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${dep_name} " ]]; then
+                    echo "Discovered dependency: $resolved_dep_path"
+                    ALL_DEPENDENCIES+=("$resolved_dep_path")
+                    COPIED_LIBS_BASENAMES+=("$dep_name")
+                    FILES_TO_INSPECT+=("$resolved_dep_path")
+                  fi
                 fi
               done
             done
 
             # Step 2: Copy all unique libraries to the bundle
             for lib_path in "${ALL_DEPENDENCIES[@]}"; do
-              echo "Copying $lib_path"
-              cp "$lib_path" "$LIBS_DEST_DIR/"
+              if [ -f "$lib_path" ]; then
+                echo "Copying $lib_path"
+                cp "$lib_path" "$LIBS_DEST_DIR/"
+              else
+                echo "Warning: Could not find dependency to copy: $lib_path"
+              fi
             done
           
             # Step 3: Update all references
@@ -102,6 +121,8 @@ jobs:
             done
 
             for binary in "${ALL_BINARIES[@]}"; do
+              # Ensure the binary exists before trying to modify it
+              if [ ! -f "$binary" ]; then continue; fi
               for lib_path in "${ALL_DEPENDENCIES[@]}"; do
                 lib_name=$(basename "$lib_path")
                 install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$binary"
@@ -114,7 +135,6 @@ jobs:
             codesign --force --deep --sign - --timestamp=none --all-architectures "$BUNDLE_DEST_PATH"
           
           elif [ "$RUNNER_OS" == "Linux" ]; then
-            # Linux packaging script
             cp build/Advancely release/
             cp -r resources release/
             cp _PLEASE_READ_ME.txt LICENSES.txt README.md release/
