[v0.9.328] Added DEBUG for fixing.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,11 @@ jobs:
       - name: Package Artifacts
         shell: bash
         run: |
+          
+          # --- ADD THESE TWO LINES FOR DEBUGGING ---
+          set -x
+          ls -lR build
+          
           mkdir release
           
           if [ "$RUNNER_OS" == "macOS" ]; then
