--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         if: runner.os == 'macOS'
         run: brew install sdl3 sdl3_image sdl3_ttf curl jpeg-xl webp
 
-      # --- CMAKE CONFIGURATION (FIXED) ---
+      # --- CMAKE CONFIGURATION ---
       - name: Configure CMake (Linux)
         if: runner.os == 'Linux'
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release
@@ -50,108 +50,78 @@ jobs:
       - name: Package Artifacts
         shell: bash
         run: |
-          
-          set -ex # Be extra verbose and exit immediately on any error
-
-          echo "--- Verifying build output ---"
-          ls -lR build
-          
-          if [ ! -d "build/Advancely.app" ]; then
-            echo "FATAL ERROR: build/Advancely.app was not created by the build step."
-            exit 1
-          fi
-
-          echo "--- Preparing release directory ---"
           mkdir release
-
-          echo "--- Copying application bundle ---"
-          cp -R "build/Advancely.app" "release/"
-          
-          echo "--- Verifying application bundle copy ---"
-          if [ ! -d "release/Advancely.app/Contents/MacOS" ]; then
-            echo "FATAL ERROR: Failed to copy Advancely.app correctly. The MacOS directory is missing."
-            ls -lR release
-            exit 1
-          fi
-          
-          echo "--- Copying resources and other files ---"
-          cp -r resources "release/"
-          cp _PLEASE_READ_ME.txt LICENSES.txt README.md "release/"
-
-          echo "--- Listing final release directory contents before bundling ---"
-          ls -lR release
-
           if [ "$RUNNER_OS" == "macOS" ]; then
-            # The rest of the bundling script for macOS...
+            # --- SCRIPT WITH RECURSIVE DEPENDENCY BUNDLING FOR .APP ---
+            BUNDLE_SRC_PATH="build/Advancely.app"
             BUNDLE_DEST_PATH="release/Advancely.app"
-            EXE_PATH="$BUNDLE_DEST_PATH/Contents/MacOS/Advancely"
+            EXE_DEST_PATH="$BUNDLE_DEST_PATH/Contents/MacOS/Advancely"
             LIBS_DEST_DIR="$BUNDLE_DEST_PATH/Contents/MacOS"
             BREW_PREFIX=$(brew --prefix)
+            echo "Using Homebrew prefix: $BREW_PREFIX"
+          
+            cp -R "$BUNDLE_SRC_PATH" "release/"
+            cp -r resources "release/"
+            cp _PLEASE_READ_ME.txt LICENSES.txt README.md "release/"
 
-            # (The rest of the recursive dependency script follows here)
-            ALL_DEPENDENCIES=()
-            COPIED_LIBS_BASENAMES=()
-            FILES_TO_INSPECT=("$EXE_PATH")
+            LIBS_TO_PROCESS=()
+            PROCESSED_LIBS=() # Tracks full original paths
+            COPIED_LIBS_BASENAMES=() # Tracks filenames to prevent duplicates
           
-            idx=0
-            while [ $idx -lt ${#FILES_TO_INSPECT[@]} ]; do
-              file_to_inspect="${FILES_TO_INSPECT[$idx]}"
-              idx=$((idx + 1))
-              if [ ! -f "$file_to_inspect" ]; then continue; fi
+            DIRECT_DEPS=$(otool -L "$EXE_DEST_PATH" | grep "$BREW_PREFIX" | awk '{gsub(/:$/, ""); print $1}')
+            for dep in $DIRECT_DEPS; do
+              LIBS_TO_PROCESS+=("$dep")
+            done
+
+            while [ ${#LIBS_TO_PROCESS[@]} -gt 0 ]; do
+              lib_path=${LIBS_TO_PROCESS[0]}
+              lib_name=$(basename "$lib_path")
+              LIBS_TO_PROCESS=("${LIBS_TO_PROCESS[@]:1}")
+
+              # FIX: Check if we have already copied a library with this FILENAME.
+              if [[ " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${lib_name} " ]]; then
+                # If we have, we don't need to copy it again. But we still must ensure
+                # the executable knows to look for the version we already copied.
+                install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$EXE_DEST_PATH"
+                continue
+              fi
+
+              echo "Processing dependency: $lib_path"
+              cp "$lib_path" "$LIBS_DEST_DIR/"
+              install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$EXE_DEST_PATH"
           
-              dir_of_file=$(dirname "$file_to_inspect")
-              DEPS=$(otool -L "$file_to_inspect" | awk '!/:$/ {print $1}' | grep -v '^/System' | grep -v '^/usr/lib')
+              PROCESSED_LIBS+=("$lib_path")
+              COPIED_LIBS_BASENAMES+=("$lib_name")
           
-              for dep_path in $DEPS; do
-                resolved_dep_path=""
-                if [[ $dep_path == @rpath* ]]; then
-                  resolved_dep_path="${dep_path/@rpath/$(realpath "$dir_of_file")}"
-                elif [[ $dep_path == $BREW_PREFIX* ]]; then
-                  resolved_dep_path="$dep_path"
-                fi
-          
-                if [[ -n "$resolved_dep_path" && -f "$resolved_dep_path" ]]; then
-                  dep_name=$(basename "$resolved_dep_path")
-                  if [[ ! " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${dep_name} " ]]; then
-                    ALL_DEPENDENCIES+=("$resolved_dep_path")
-                    COPIED_LIBS_BASENAMES+=("$dep_name")
-                    FILES_TO_INSPECT+=("$resolved_dep_path")
-                  fi
-                fi
+              TRANSITIVE_DEPS=$(otool -L "$lib_path" | grep "$BREW_PREFIX" | awk '{gsub(/:$/, ""); print $1}')
+              for transitive_dep in $TRANSITIVE_DEPS; do
+                LIBS_TO_PROCESS+=("$transitive_dep")
               done
             done
-
-            for lib_path in "${ALL_DEPENDENCIES[@]}"; do
-              if [ -f "$lib_path" ]; then
-                cp "$lib_path" "$LIBS_DEST_DIR/"
-              fi
-            done
           
-            ALL_BINARIES=("$EXE_PATH")
-            for lib_name in "${COPIED_LIBS_BASENAMES[@]}"; do
-                ALL_BINARIES+=("$LIBS_DEST_DIR/$lib_name")
-            done
-
-            for binary in "${ALL_BINARIES[@]}"; do
-              if [ ! -f "$binary" ]; then continue; fi
-
-              if [[ "$binary" == *".dylib" ]]; then
-                lib_name=$(basename "$binary")
-                install_name_tool -id "@executable_path/$lib_name" "$binary"
-              fi
-
-              for dep_path in "${ALL_DEPENDENCIES[@]}"; do
-                dep_name=$(basename "$dep_path")
-                original_ref=$(otool -L "$binary" | awk -v d="$dep_name" '$0 ~ d {print $1; exit}')
-                if [ -n "$original_ref" ]; then
-                    install_name_tool -change "$original_ref" "@executable_path/$dep_name" "$binary"
+            for copied_lib_path in "$LIBS_DEST_DIR"/lib*.dylib; do
+              for original_lib_path in "${PROCESSED_LIBS[@]}"; do
+                original_lib_name=$(basename "$original_lib_path")
+                if [ -f "$LIBS_DEST_DIR/$original_lib_name" ]; then
+                  install_name_tool -change "$original_lib_path" "@executable_path/$original_lib_name" "$copied_lib_path"
                 fi
               done
             done
           
-            codesign --force --sign - --timestamp=none --all-architectures "$LIBS_DEST_DIR"/lib*.dylib
-            codesign --force --deep --sign - --timestamp=none --all-architectures "$BUNDLE_DEST_PATH"
+            codesign --force --sign - "$LIBS_DEST_DIR"/lib*.dylib
+            codesign --force --deep --sign - "$BUNDLE_DEST_PATH"
           
+            TEMPLATE_DIR="release/resources/templates/1.16.1"
+            if [ -d "$TEMPLATE_DIR/All_Advancements" ]; then
+              mv "$TEMPLATE_DIR/All_Advancements" "$TEMPLATE_DIR/advancements_temp" && mv "$TEMPLATE_DIR/advancements_temp" "$TEMPLATE_DIR/all_advancements"
+            fi
+            LOWERCASE_DIR="$TEMPLATE_DIR/all_advancements"
+            if [ -f "$LOWERCASE_DIR/1_16_1_All_Advancements.json" ]; then
+              mv "$LOWERCASE_DIR/1_16_1_All_Advancements.json" "$LOWERCASE_DIR/temp.json" && mv "$LOWERCASE_DIR/temp.json" "$LOWERCASE_DIR/1_16_1_all_advancements.json"
+            fi
+            if [ -f "$LOWERCASE_DIR/1_16_1_All_Advancements_lang.json" ]; then
+              mv "$LOWERCASE_DIR/1_16_1_All_Advancements_lang.json" "$LOWERCASE_DIR/temp_lang.json" && mv "$LOWERCASE_DIR/temp_lang.json" "$LOWERCASE_DIR/1_16_1_all_advancements_lang.json"
+            fi
           elif [ "$RUNNER_OS" == "Linux" ]; then
             cp build/Advancely release/
             cp -r resources release/
@@ -159,41 +129,18 @@ jobs:
             cp /usr/local/lib/libSDL3.so.0 release/
             cp /usr/local/lib/libSDL3_image.so.0 release/
             cp /usr/local/lib/libSDL3_ttf.so.0 release/
+            TEMPLATE_DIR="release/resources/templates/1.16.1"
+            if [ -d "$TEMPLATE_DIR/All_Advancements" ]; then
+              mv "$TEMPLATE_DIR/All_Advancements" "$TEMPLATE_DIR/all_advancements"
+            fi
+            LOWERCASE_DIR="$TEMPLATE_DIR/all_advancements"
+            if [ -f "$LOWERCASE_DIR/1_16_1_All_Advancements.json" ]; then
+              mv "$LOWERCASE_DIR/1_16_1_All_Advancements.json" "$LOWERCASE_DIR/1_16_1_all_advancements.json"
+            fi
+            if [ -f "$LOWERCASE_DIR/1_16_1_All_Advancements_lang.json" ]; then
+              mv "$LOWERCASE_DIR/1_16_1_All_Advancements_lang.json" "$LOWERCASE_DIR/1_16_1_all_advancements_lang.json"
+            fi
           fi
-          
-          # --- Common Post-Packaging Steps for all OS ---
-          echo "Correcting template filenames..."
-          TEMPLATE_DIR="release/resources/templates/1.16.1"
-          if [ -d "$TEMPLATE_DIR/All_Advancements" ]; then
-            mv "$TEMPLATE_DIR/All_Advancements" "$TEMPLATE_DIR/all_advancements"
-          fi
-          
-          LOWERCASE_DIR="$TEMPLATE_DIR/all_advancements"
-          if [ -f "$LOWERCASE_DIR/1_16_1_All_Advancements.json" ]; then
-            mv "$LOWERCASE_DIR/1_16_1_All_Advancements.json" "$LOWERCASE_DIR/1_16_1_all_advancements.json"
-          fi
-          if [ -f "$LOWERCASE_DIR/1_16_1_All_Advancements_lang.json" ]; then
-            mv "$LOWERCASE_DIR/1_16_1_All_Advancements_lang.json" "$LOWERCASE_DIR/1_16_1_all_advancements_lang.json"
-          fi
-          
-      - name: Create DMG for macOS
-        if: runner.os == 'macOS'
-        run: |
-          # Create a temporary directory for the DMG content
-          mkdir -p dmg_content
-          
-          # Move the app and its resources into the temp directory
-          mv release/Advancely.app dmg_content/
-          mv release/resources dmg_content/
-          mv release/_PLEASE_READ_ME.txt dmg_content/
-          mv release/LICENSES.txt dmg_content/
-          mv release/README.md dmg_content/
-          
-          # Create a symbolic link to the Applications folder
-          ln -s /Applications dmg_content/Applications
-          
-          # Use hdiutil to create the final DMG
-          hdiutil create -volname "Advancely" -srcfolder "dmg_content" -ov -format UDZO "release/Advancely.dmg"
 
       # --- ZIPPING AND UPLOADING STEP (FIXED) ---
       - name: Set Final Archive Name
